--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Creating Human</title>
+    <title>Crafting Human</title>
     <link rel="icon" type="image/x-icon" href="assets/chara.png">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <main class="canvas">
-        <img src="assets/plate.png" alt="Plate" class="plate" />
-        <img src="assets/wool_string.png" alt="Wool string" class="wool-string" hidden />
+        <img src="assets/plate.png" alt="Plate" class="plate" data-hover-text="Press Enter to Craft" />
+        <div class="wool-strings" aria-hidden="true">
+            <img src="assets/wool_string.png" alt="" class="wool-string" data-template="true" hidden />
+        </div>
 
         <svg class="resource-guides" viewBox="0 0 1000 1000" preserveAspectRatio="none" aria-hidden="true">
             <polyline class="guide-line guide-line--sensitive" points="710,280 750,220 880,220" />
@@ -54,7 +56,13 @@
             </div>
         </aside>
     </main>
+
     <p class="resource-hint" aria-live="polite"></p>
+
+    <div class="result-overlay" aria-live="polite" aria-hidden="true">
+        <img src="" alt="Crafted result" class="result-image" />
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
