--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
     
     <div class="result-overlay" aria-live="polite" aria-hidden="true">
         <img src="" alt="Crafted result" class="result-image" />
+        <div class="result-meta">
+            <h2 class="result-type"></h2>
+            <p class="result-description"></p>
+        </div>
     </div>
 
     <script src="script.js"></script>
